# test_qwen_code

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: main.rs
frontend/: index.html  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/assets/css/: style.css
frontend/src/pages/: AiAssistant.vue  BiographyEditor.vue  DashboardView.vue  HomeView.vue
frontend/src/router/: index.js
